<resources>
    <string name="app_name">MyApp</string>
    <string name="birth_tv1">盛世华诞</string>
    <string name="birth_tv2">振兴中华</string>
    <string name="birth_tv3">周年</string>
    <string name="birth_tv4">1949-2019</string>
    <string name="birth_iv">70</string>
    <string name="birth_tv5">From 肖林</string>
    <string name="score_plus1">+1 point</string>
    <string name="score_plus2">+2 points</string>
    <string name="score_plus3">+3 points</string>
    <string name="score_teamA">teamA</string>
    <string name="score_teamB">teamB</string>
    <string name="all_0">0</string>
    <string name="all_reset">reset</string>
    <string name="ex_input">input RMB</string>
    <string name="all_hello">hello</string>
    <string name="btn_dollar">dollar</string>
    <string name="btn_euro">euro</string>
    <string name="btn_won">won</string>
    <string name="all_config">config</string>
    <string name="all_save">save</string>
    <string name="menu_item1">check rates</string>
    <string name="menu_item2">myList</string>
    <string name="all_nodata">No Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
