<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@mipmap/bg_birth"
    tools:context=".BirthdayCardActivity">

    <TextView
        android:id="@+id/tv_birth1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/birth_tv1"
        android:textColor="#F8DF02"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_birth2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/birth_tv2"
        android:textColor="#F8DF02"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_birth1" />

    <ImageView
        android:id="@+id/iv_birth"
        android:layout_width="249dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        app:srcCompat="@mipmap/img_number"
        android:contentDescription="@string/birth_iv" />

    <TextView
        android:id="@+id/tv_birth3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/birth_tv3"
        android:textColor="#F8B802"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_birth" />

    <TextView
        android:id="@+id/tv_birth4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/birth_tv4"
        android:textColor="#F8B802"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_birth3"
        app:layout_constraintTop_toTopOf="@+id/tv_birth3" />

    <TextView
        android:id="@+id/tv_birth5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:text="@string/birth_tv5"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>